--- a/index.html
+++ b/index.html
@@ -429,10 +429,12 @@
                     businesses. <br> This app build on React serves the same purpose. Do try it and let hackers dream of cracking your
                     code!</p> -->
                     <span id="techStacks">
-                        <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
-                        <i class="fa-brands fa-css3 fa-beat-fade fa-2xl"></i>
+                        <div class="htmlCssJsLogos">
+                            <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
+                            <i class="fa-brands fa-css3 fa-beat-fade fa-2xl"></i>
+                            <img class="tailwindCSSpngForMobiles" src="./imageResources/tailwindPNG3D.png" alt="">
+                        </div>
                         <!-- <svg height="20" preserveAspectRatio="xMidYMid" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 153.6"><linearGradient id="a" x1="-2.778%" y1="32%" y2="67.556%"><stop offset="0" stop-color="#2298bd"/><stop offset="1" stop-color="#0ed7b5"/></linearGradient><path d="M128 0C93.867 0 72.533 17.067 64 51.2 76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0zM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2 9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8z" fill="url(#a)"/></svg> -->
-                        <img class="tailwindCSSpngForMobiles" src="./imageResources/tailwindPNG3D.png" alt="">
                         <!-- <svg id="tailwindIcon" height="20" preserveAspectRatio="xMidYMid" viewBox="0 0 256 154" width="20"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <linearGradient id="a" x1="-2.777778%" x2="100%" y1="32%" y2="67.555556%">
@@ -443,8 +445,10 @@
                                 d="m128 0c-34.1333333 0-55.4666667 17.0666667-64 51.2 12.8-17.0666667 27.7333333-23.4666667 44.8-19.2 9.737481 2.4343704 16.697363 9.4985481 24.401067 17.3184 12.549689 12.7383704 27.07437 27.4816 58.798933 27.4816 34.133333 0 55.466667-17.0666667 64-51.2-12.8 17.0666667-27.733333 23.4666667-44.8 19.2-9.737481-2.4343704-16.697363-9.4985481-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816zm-64 76.8c-34.1333333 0-55.46666667 17.0666667-64 51.2 12.8-17.066667 27.7333333-23.466667 44.8-19.2 9.7374815 2.43437 16.697363 9.498548 24.4010667 17.3184 12.5496889 12.73837 27.0743703 27.4816 58.7989333 27.4816 34.133333 0 55.466667-17.066667 64-51.2-12.8 17.066667-27.733333 23.466667-44.8 19.2-9.737481-2.43437-16.697363-9.498548-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816z"
                                 fill="url(#a)" />
                         </svg> -->
-                        <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
-                        <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i>
+                        <div class="JsReactLogos">
+                            <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
+                            <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i>
+                        </div>
                     </span>
                     <a href="https://kh-password-generator.netlify.app/" id="extLinkAnchor" target="_blank"><img
                             src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
@@ -461,11 +465,20 @@
                 <span class="numberingWorkMobiles"></span>
                 <h3>BG Color Changer using React</h3>
                 <span id="techStacks">
-                    <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
+                    <!-- <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
                     <i class="fa-brands fa-css3 fa-beat-fade fa-2xl"></i>
                     <img class="tailwindCSSpngForMobiles" src="./imageResources/tailwindPNG3D.png" alt="">
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
-                    <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i>
+                    <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i> -->
+                    <div class="htmlCssJsLogos">
+                        <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
+                        <i class="fa-brands fa-css3 fa-beat-fade fa-2xl"></i>
+                        <img class="tailwindCSSpngForMobiles" src="./imageResources/tailwindPNG3D.png" alt="">
+                    </div>
+                    <div class="JsReactLogos">
+                        <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
+                        <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i>
+                    </div>
                 </span>
                 <a href="https://kh-bg-changer.netlify.app/" id="extLinkAnchor" target="_blank"><img
                         src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
