Increased the slider width in mobile mode
Increased the slider width in mobile mode

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
         </div>
         <div class="blogIntro">
             <h4>Here, I document my journey as a software developer, encompassing the projects I have undertaken in full stack web development, my
-                progress in Data Structures and Algorithms (DSA), and my experiences in the fieldAI & ML, and other
+                progress in Data Structures and Algorithms (DSA), and my experiences in the field of AI & ML, and other
                 noteworthy achievements.
             </h4>
         </div>
