Tried using Hammer "tap" event
Tried using Hammer "tap" event, Let's see!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- <script src="https://kit.fontawesome.com/e7bf5cfb41.js" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/e7bf5cfb41.js" crossorigin="anonymous"></script>
 
+    <!-- Including Hammer, for creating Tap event for mobile phones -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+
+
     <!-- Code to attach the google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
