Hammer Tap event not working!
Hammer tap event not working, so used Link Img for Mobiles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <script src="https://kit.fontawesome.com/e7bf5cfb41.js" crossorigin="anonymous"></script>
 
     <!-- Including Hammer, for creating Tap event for mobile phones -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script> -->
+    <!-- Not working! -->
 
 
     <!-- Code to attach the google fonts -->
@@ -455,7 +456,7 @@
                         </div>
                     </span>
                     <a href="https://kh-password-generator.netlify.app/" id="extLinkAnchor" target="_blank"><img
-                            src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                            src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="./imageResources/passCodeBgImg.jpeg" alt="RandomPasswordGenerator">
@@ -485,7 +486,7 @@
                     </div>
                 </span>
                 <a href="https://kh-bg-changer.netlify.app/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="./imageResources/bgChangerReact.jpeg" alt="BGcolorChangerReact">
@@ -504,7 +505,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/GuessTheNumberBy_KumarHarsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/GuessTheNumberPoster.avif" alt="GuessTheNumberGame">
@@ -522,7 +523,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/dhun_Feel_the_Music_BY_Kumar_Harsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/dhunBrandPic.png" alt="dhunMusicStreamingWebApp" id="dhun">
@@ -540,7 +541,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/Drumkit_by_kumar_harsh.github.io/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/DrumKitPoster.jpeg" alt="DrumKitGame">
@@ -559,7 +560,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/BMI_calculator_BY_Kumar_Harsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/BMIposter2.webp" alt="BMIcalculator">
@@ -578,7 +579,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/dicee_game_by_kumar_harsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/DiceGamePoster.jpeg" alt="DiceGame" class=" DiceGame">
@@ -597,7 +598,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/Color_ChangerAPP_BY_Kumar_Harsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/BackGroundColorChangerPoster.jpeg" alt="BackGroundColorChanger"
@@ -616,7 +617,7 @@
                     <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
                 </span>
                 <a href="https://kharsh560.github.io/Digital_Clock_BY_Kumar_Harsh/" id="extLinkAnchor" target="_blank"><img
-                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
             </div>
             <div class="myPortfolioContainerMobilesImgLink">
                 <img src="imageResources/TimePoster.gif" alt="currentTime" class="currentTime">
