--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                     2. Full Stack Web Development (MERN stack)  <br>
                     3. Data Science:- thus exploring AI & ML!  <br>
                     4. Exploring BlockChain & Web3 <br> <br>
-                -> My resume :-  <a target="_blank" href="https://drive.google.com/file/d/1lexggToHkPBPQgghAbPDleRWnltDZyGR/view?usp=drive_link"><i class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a> <br>
+                    <div>
+                        My resume :-  <a target="_blank" href="https://drive.google.com/file/d/1lexggToHkPBPQgghAbPDleRWnltDZyGR/view?usp=drive_link"><i class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a> <br>
+                    </div>
                 </p>
             </div>
         </div>
