--- a/index.html
+++ b/index.html
@@ -65,23 +65,18 @@
             </h1>
             <!-- <div id="posterForMobiles"></div> -->
             <!-- <img class="posterImgForMobiles" src="imageResources/MyWebPageImg2.png" alt="posterForMobileViewers"> -->
-            <p class="p1">I am currently a second year undergraduate student at Maharaja Agrasen Institute of Technology (MAIT), Delhi, pursuing a Bachelor of
-                Science in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine
+            <p class="p1">I am currently a third year undergraduate student at Maharaja Agrasen Institute of Technology (MAIT), Delhi, pursuing a Bachelor of
+                Technology in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine
                 Learning. <br> <br> My passion lies in the field of coding, where I spend a significant part of my time
                 learning and adopting new technologies. My approach to problem solving is deeply rooted in my love of
                 coding, and I actively improve my skills by solving challenges on platforms like LeetCode and
-                CodeStudio, primarily using the "C/C++" programming language.
-                <br>
-                I am also in the process of expanding my knowledge in the field of full-stack web development with a
-                current focus on front-end development. I have gained knowledge in HTML, CSS and JavaScript and am
-                currently working on React.js. At the same time, I also embarked on a journey into Data Science, which
-                aligns with my academic pursuits in my B.Tech program.
+                CodeStudio, primarily using the "C/C++" programming language. I am also in the process of expanding my knowledge in the field of full-stack web development. After mastering JavaScript, I am learning React.js.
                 <br> <br>
                 Essentially, I pursue multiple avenues of learning and growth and strive to excel in each through my
                 unwavering commitment and enthusiasm. Your consideration of my journey would be greatly appreciated.
             </p>
         </div>
-        <img src="imageResources/MyWebPageImg3.png" class="myPoster" alt="myPoster">
+        <img src="imageResources/KH_subject.png" class="myPoster" alt="myPoster">
 
     </div>
 
@@ -94,16 +89,18 @@
             <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
             <div id="aboutMeContainerWriteup">
                 <h1>About Me</h1>
+                <div>
+                    My resume :- <a target="_blank"
+                        href="https://drive.google.com/file/d/1yCYWlFNzkt73nkPX3Ig7ak2tbUI0-3k3/view?usp=sharing"><i
+                            class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
+                </div>
                 <p>I am Kumar Harsh, an individual deeply passionate about coding and its various facets. <br>
-                    My primary objectives within the four years of my B.Tech journey, will revolve around <br> acquiring
+                    My primary objectives within the four years of my B.Tech journey, will revolve around acquiring
                     proficiency in four key areas:<br> <br>
                     1. Data Structures and Algorithms <br>
                     2. Full Stack Web Development (MERN stack)  <br>
                     3. Data Science:- thus exploring AI & ML!  <br>
                     4. Exploring BlockChain & Web3 <br> <br>
-                    <div>
-                        My resume :-  <a target="_blank" href="https://drive.google.com/file/d/1lexggToHkPBPQgghAbPDleRWnltDZyGR/view?usp=drive_link"><i class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a> <br>
-                    </div>
                 </p>
             </div>
         </div>
@@ -229,6 +226,37 @@
     <!--  ########################################################## Portfolio section for Laptops ########################################################## -->
     <h1 id="myWork">My Work</h1>
     <div class="myPortfolioContainerLaptops">
+
+        <!-- -1 th -->
+        <div class="work">
+            <img src="./imageResources/todoListBGimg.jpg" alt="TO-DO list">
+            <div class="layer">
+                <h3>To-Do list App</h3>
+                <p>
+                    A TODO app is vital for daily life as it enhances productivity by organizing and prioritizing tasks, ensuring efficient
+                    time management. It fosters accountability and helping users stay focused and on track. So wait not and try this TO-DO app which does not looses your todos even after refreshing, achieved by incorporating <b>local storage</b>.
+                </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <svg id="tailwindIcon" height="20" preserveAspectRatio="xMidYMid" viewBox="0 0 256 154" width="20"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <linearGradient id="a" x1="-2.777778%" x2="100%" y1="32%" y2="67.555556%">
+                            <stop offset="0" stop-color="#2298bd" />
+                            <stop offset="1" stop-color="#0ed7b5" />
+                        </linearGradient>
+                        <path
+                            d="m128 0c-34.1333333 0-55.4666667 17.0666667-64 51.2 12.8-17.0666667 27.7333333-23.4666667 44.8-19.2 9.737481 2.4343704 16.697363 9.4985481 24.401067 17.3184 12.549689 12.7383704 27.07437 27.4816 58.798933 27.4816 34.133333 0 55.466667-17.0666667 64-51.2-12.8 17.0666667-27.733333 23.4666667-44.8 19.2-9.737481-2.4343704-16.697363-9.4985481-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816zm-64 76.8c-34.1333333 0-55.46666667 17.0666667-64 51.2 12.8-17.066667 27.7333333-23.466667 44.8-19.2 9.7374815 2.43437 16.697363 9.498548 24.4010667 17.3184 12.5496889 12.73837 27.0743703 27.4816 58.7989333 27.4816 34.133333 0 55.466667-17.066667 64-51.2-12.8 17.066667-27.733333 23.466667-44.8 19.2-9.737481-2.43437-16.697363-9.498548-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816z"
+                            fill="url(#a)" />
+                    </svg>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                    <i class="fa-brands fa-react fa-xl fa-bounce" style="color: #63E6BE;"></i>
+                </span>
+                <a href="https://todo-with-localstorage-kh.netlify.app" id="extLinkAnchor" target="_blank"><img
+                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+            </div>
+        </div>
+
         <!-- 0th -->
         <div class="work">
             <img src="./imageResources/currencyBG.webp" alt="Currency_Convertor">
@@ -287,7 +315,7 @@
             </div>
         </div>
         <!-- 2 -->
-        <div class="work">
+        <div class="work toggling invisible">
             <img src="./imageResources/bgChangerReact.jpeg" alt="BGcolorChangerReact">
             <div class="layer">
                 <h3>BG Color Changer using React</h3>
