Fixed mobile version after last update
Fixed mobile version after last update.

--- a/index.html
+++ b/index.html
@@ -80,28 +80,30 @@
 
     </div>
 
-
+    <!-- Open project with live server :- https://www.youtube.com/shorts/yrY68DgO79A?feature=share -->
     <!--  ########################################################## intro section ends  ########################################################## -->
     <!--  ########################################################## Third portion of the website:- About Me  ########################################################## -->
 
     <div id="aboutMeContainer">
         <div id="aboutMeContainerDpAndWriteup">
-            <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
-            <div id="aboutMeContainerWriteup">
-                <h1>About Me</h1>
-                <div>
-                    My resume :- <a target="_blank"
-                        href="https://drive.google.com/file/d/1yCYWlFNzkt73nkPX3Ig7ak2tbUI0-3k3/view?usp=sharing"><i
-                            class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
+            <div id="wrapperDivWrappingDpAndWriteup" >
+                <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
+                <div id="aboutMeContainerWriteup">
+                    <h1>About Me</h1>
+                    <div>
+                        My resume :- <a target="_blank"
+                            href="https://drive.google.com/file/d/1yCYWlFNzkt73nkPX3Ig7ak2tbUI0-3k3/view?usp=sharing"><i
+                                class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
+                    </div>
+                    <p>I am Kumar Harsh, an individual deeply passionate about coding and its various facets. <br>
+                        My primary objectives within the four years of my B.Tech journey, will revolve around acquiring
+                        proficiency in four key areas:<br> <br>
+                        1. Data Structures and Algorithms <br>
+                        2. Full Stack Web Development (MERN stack) <br>
+                        3. Data Science:- thus exploring AI & ML! <br>
+                        4. Exploring BlockChain & Web3 <br> <br>
+                    </p>
                 </div>
-                <p>I am Kumar Harsh, an individual deeply passionate about coding and its various facets. <br>
-                    My primary objectives within the four years of my B.Tech journey, will revolve around acquiring
-                    proficiency in four key areas:<br> <br>
-                    1. Data Structures and Algorithms <br>
-                    2. Full Stack Web Development (MERN stack)  <br>
-                    3. Data Science:- thus exploring AI & ML!  <br>
-                    4. Exploring BlockChain & Web3 <br> <br>
-                </p>
             </div>
         </div>
 
@@ -223,7 +225,7 @@
 
     <!--  ########################################################## about me section ends  ########################################################## -->
     <!--  ########################################################## Portfolio section begins  ########################################################## -->
-    <!--  ########################################################## Portfolio section for Laptops ########################################################## -->
+    <!-- NOTE  ########################################################## Portfolio section for Laptops ########################################################## -->
     <h1 id="myWork">My Work</h1>
     <div class="myPortfolioContainerLaptops">
 
@@ -482,10 +484,37 @@
         <a href="#myWork"><button class="showMoreButton btn-grad">Show more</button></a>
     </div>
 
-    <!--  ########################################################## Portfolio section for mobiles ########################################################## -->
+    <!-- NOTE  ########################################################## Portfolio section for mobiles ########################################################## -->
     <div class="myPortfolioContainerMobiles">
         <!-- 0th -> trying to put the div in href  -->
         <!-- And it didn't work!! -->
+
+        <!-- -1th -->
+        <div class="workMobiles">
+            <div class="myPortfolioContainerMobilesParaDiv">
+                <span class="numberingWorkMobiles"></span>
+                <h3>To-Do list App</h3>
+                <span id="techStacks">
+                    <div class="htmlCssJsLogos">
+                        <i class="fa-brands fa-html5 fa-beat-fade fa-2xl"></i>
+                        <i class="fa-brands fa-css3 fa-beat-fade fa-2xl"></i>
+                        <img class="tailwindCSSpngForMobiles" src="./imageResources/tailwindPNG3D.png" alt="">
+                    </div>
+                    <div class="JsReactLogos">
+                        <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #63E6BE;"></i>
+                        <i class="fa-brands fa-react fa-2xl fa-bounce" style="color: #63E6BE;"></i>
+                    </div>
+                </span>
+                <a href="https://todo-with-localstorage-kh.netlify.app" id="extLinkAnchor" target="_blank"><img
+                        src="./imageResources/linkForMobileView.png" alt="extLinkIcon" id="extLink"></a>
+            </div>
+            <div class="myPortfolioContainerMobilesImgLink">
+                <a href="https://todo-with-localstorage-kh.netlify.app" target="_blank">
+                    <img src="./imageResources/todoListBGimg.jpg" alt="Currency_Convertor">
+                </a>
+        
+            </div>
+        </div>
 
         <!-- 0th -->
         <div class="workMobiles">
