Added some new features in appearance.
Added some new features in appearance.
1) Slide in effect on page load.
2) Fixed the nav bar for mobiles.
3) Added technical executive post.

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 
     <!--  ########################################################## Second layer, having Intro  ########################################################## -->
     <div id="intro">
-        <div class="aboutMeWriteup">
-            <!-- greeting for Laptops -->
-            <h1 id="GreetingsForLaptop">Greetings!
+        <div class="aboutMeWriteup introLeftPortion" id="leftDiv" >
+            <!-- NOTE: for Laptops => This greeting and the below one paragraph -->
+            <h1 id="GreetingsForLaptop" >Greetings!
                 <br>
                 <span class="myName">I'm KUMAR HARSH</span>
                 <br>
                 a Software Developer
             </h1>
-            <!-- greeting for mobiles -->
+            <!-- NOTE: for mobiles => Only greetings  -->
             <h1 id="GreetingsForMobiles">
                 Greetings! <span class="myName">I'm <br> KUMAR HARSH</span> <br> a Software Developer
             </h1>
-            <!-- <div id="posterForMobiles"></div> -->
-            <!-- <img class="posterImgForMobiles" src="imageResources/MyWebPageImg2.png" alt="posterForMobileViewers"> -->
+
+            <!-- NOTE: for Laptops => This paragraph and the above greetings -->
             <p class="p1">I am currently a third year undergraduate student at Maharaja Agrasen Institute of Technology (MAIT), Delhi, pursuing a Bachelor of
                 Technology in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine
                 Learning. <br> <br> My passion lies in the field of coding, where I spend a significant part of my time
@@ -76,7 +76,7 @@
                 unwavering commitment and enthusiasm. Your consideration of my journey would be greatly appreciated.
             </p>
         </div>
-        <img src="imageResources/KH_subject.png" class="myPoster" alt="myPoster">
+        <img src="imageResources/KH_subject.png" class="myPoster introRightPortion" id="rightDiv" alt="myPoster">
 
     </div>
 
@@ -145,6 +145,17 @@
             <div class="aboutMeExperience inactiveTab">
                 <!-- 4 -->
                 <div class="aboutMeInfoTopic">
+                    <p>Technical Executive at CSI-IW</p>
+                </div>
+                <div>
+                    <p>
+                    => Active Member of the Technical Team as a technical executive at CSI-INNOWAVE. <br>
+                    => Its one of the oldest and most prestigious societies at Maharaja Agrasen Institute of Technology, Delhi, started in the year 2009.
+                    </p>
+                </div>
+
+                <!-- 4 -->
+                <div class="aboutMeInfoTopic">
                     <p>Selected amongst #Top10 teams in NIT Patna's PitchTemberFest.</p>
                 </div>
                 <div>
@@ -153,15 +164,7 @@
                         where in we had worked on our platform SyncSphere.
                     </p>
                 </div>
-                <!-- <div class="aboutMeInfoTopic">
-                    <p>Attended a Hackathon</p>
-                </div>
-                <div>
-                    <p>=> I got a chance to attend the hackathon organised by DTU, called VIHAAN 6.0 <br>
-                       => Me and my team worked upon the idea of tourism industry, on how to make   
-                        people aware of and increase tourism of the undiscovered places in India, through a 
-                        webApp, where our aim was to give info about such places in blog form!</p>
-                </div> -->
+        
                 <!-- 5 -->
                 <div class="aboutMeInfoTopic">
                     <p>Our solution got accepted in Google Solution Challenge under GDSC.</p>
@@ -200,23 +203,9 @@
                 </div>
                 <div>
                     <p>Pursuing B.Tech in Computer Science and Engineering with specialization in Artificial
-                        Intelligence and Machine Learning, presently in 2nd-year.</p>
+                        Intelligence and Machine Learning, presently in 3rd-year.</p>
                 </div>
-                <!-- 8
-                <div class="aboutMeInfoTopic">
-                    <p>Prepared for IIT Advanced Exam</p>
-                </div>
-                <div>
-                    <p>Went to Resonance Coaching Institute, Kota, Rajasthan, for the preparation of <br>
-                        IIT Advanced Examination along with JEE Exam, ofcourse!</p>
-                </div>
-                9
-                <div class="aboutMeInfoTopic">
-                    <p>School</p>
-                </div>
-                <div>
-                    <p>Went to Vidya Vihar Residential School, Purnia, Bihar from 7th to 10th Class!</p>
-                </div> -->
+                
             </div>
         </div>
     </div>
